@@ -1,6 +1,8 @@
 1.3
 - Added "Pulse" item to IIS checker: if Zabbix doesn't receive a pulse in time, it emits only one alert and suppresses alerts on every site.
 - Implemented processing of relative file names from config.
+- Fixed issues:
+  - Checker thread shuts down on exceptions during fetch state phase.
 
 1.2
 - Removed separate IIS checker scripts:
